--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: DangoPlayerUni_Logo.png
 
 
 
-baseurl: "/dangoguides_es"
+baseurl: "/dangoguides_spanish"
 color: "#1DE9B6"
 accentColor: teal
 themeColor: purple
